# mdv

./: .gitignore  README.md  architecture-diagram.html  audit-review.md  data-structure-memory-layout.html  flow-diagrams.html  index.html  package-lock.json  package.json  playwright.config.mjs  raw-memory-layout-rendered-document.html  rendering-sequence-diagram.html  technical-diagram-maker-showcase.html  tsconfig.json  vite.config.js  vite.config.ts
.github/workflows/: rust.yml
sample/: example.md
sample/synthetic/: class-and-er.md  flow-and-sequence.md  gantt-and-journey.md  gitgraph-and-pie.md  mindmap-and-timeline.md  state-and-architecture.md
src/: main.js  main.ts  recent.ts  save-path.ts  shortcuts.ts  styles.css  theme.ts  view.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_menu.rs  commands.rs  explorer.rs  lib.rs  main.rs  markdown.rs  powerpoint_clipboard.rs  state.rs  test_support.rs  trusted_preview.rs  watcher.rs  workspace.rs  workspace_payload.rs  workspace_session.rs
test/e2e/: app.spec.mjs
test/e2e/mocks/: tauri-core.ts  tauri-dialog.ts  tauri-event.ts  tauri-fixture.ts  tauri-path.ts  tauri-window.ts
test/frontend/: package.test.mjs  recent.test.mjs  save-path.test.mjs  shortcuts.test.mjs  theme.test.mjs  view.test.mjs
