[package]
name = "mdv"
version = "0.1.0"
edition = "2024"
default-run = "mdv"

[lib]
name = "mdv_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
comrak = "0.52"
notify = "8.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
